--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -28,3 +28,14 @@ jobs:
 
       - name: Build with Maven
         run: ./mvnw -ntp verify
+      - if: ${{ github.ref == 'refs/heads/main' }}
+        name: login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - if: ${{ github.ref == 'refs/heads/main' }}
+        name: Build and Publish Docker Image
+        run: |
+          ./mvnw spring-boot:build-image -DskipTests
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/medlab-catalog-service
