--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -31,6 +31,7 @@
 		<java.version>21</java.version>
 		<springdoc-openapi.version>2.8.5</springdoc-openapi.version>
 		<spotless-maven-plugin.version>2.44.3</spotless-maven-plugin.version>
+		<dockerImageName>medboucetta/medlab-${project.artifactId}</dockerImageName>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -105,7 +106,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured-all</artifactId>
+			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
 
@@ -129,6 +130,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>${dockerImageName}</name>
+					</image>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
