--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_USERNAME=my_postgres
-DB_PASSWORD=my_postgres
-DB_URL=jdbc:postgresql://localhost:15432/my_postgres
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_URL=jdbc:postgresql://localhost:15432/postgres
