--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -1,9 +1,9 @@
-name: Catalog Service
+name: Order Service
 
 on:
   push:
     paths:
-      - catalog-service/**
+      - order-service/**
     branches:
       - 'master'
   pull_request:
@@ -15,15 +15,15 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     env:
-      working-directory: ./catalog-service
-      DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/medlab-catalog-service
+      working-directory: ./order-service
+      DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/medlab-order-service
     defaults:
       run:
         working-directory: ${{ env.working-directory }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Java 21
+        - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
@@ -41,7 +41,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+          
       - name: Build and Publish Docker Image
         run: |
           ./mvnw spring-boot:build-image -DskipTests
