--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.jpa.open-in-view=false
 springdoc.swagger-ui.path=/swagger-ui.html
 ######## RabbitMD Configuration  #########
 spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
-spring.rabbitmq.port=${RABBITMQ_PORT:15672}
+# use port 15672 for AMQP protocol connections and not 5672 to get the management UI
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
