--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -32,6 +32,10 @@
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 		<spotless-maven-plugin.version>2.44.3</spotless-maven-plugin.version>
 		<resilience4j.version>2.3.0</resilience4j.version>
+		<shedlock.version>6.5.0</shedlock.version>
+		<wiremock.version>3.13.0</wiremock.version>
+		<wiremock-testcontainers.version>1.0-alpha-15</wiremock-testcontainers.version>
+		<instancio.version>5.4.1</instancio.version>
 		<dockerImageName>medboucetta/medlab-${project.artifactId}</dockerImageName>
 	</properties>
 	<dependencies>
@@ -122,6 +126,35 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.instancio</groupId>
+			<artifactId>instancio-junit</artifactId>
+			<version>${instancio.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.wiremock</groupId>
+			<artifactId>wiremock-standalone</artifactId>
+			<version>${wiremock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.wiremock.integrations.testcontainers</groupId>
+			<artifactId>wiremock-testcontainers-module</artifactId>
+			<version>${wiremock-testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.dasniko</groupId>
+			<artifactId>testcontainers-keycloak</artifactId>
+			<version>3.6.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
