--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,6 +5,7 @@ management.endpoints.web.exposure.include=*
 management.info.git.mode=full
 
 ######## Order Service Configuration  #########
+orders.catalog-service-url=http://localhost:8081
 orders.order-events-exchange=orders-exchange
 orders.new-orders-queue=new-orders
 orders.delivered-orders-queue=delivered-orders
